# pypette

./: .coveragerc  .gitignore  .travis.yml  HISTORY.rst  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/: OWNERS
.github/workflows/: pytest.yml
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  structures.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  install.doctree  structures.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  structures.html
docs/_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree  structures.doctree
docs/_build/html/_modules/: index.html  threading.html
docs/_build/html/_modules/pypette/: jobs.html  pipes.html  threadwrapper.html
docs/_build/html/_sources/: index.rst.txt  install.rst.txt
docs/_build/html/_static/: documentation_options.js
examples/: basic.py
pipette/: __init__.py  __version__.py  jobs.py  pipes.py
pypette/: __init__.py  __version__.py  jobs.py  pipes.py  threadwrapper.py
tests/: bash_job_test.py  job_test.py  jobs_test.py  pipes_test.py  threadwrapper_test.py
