[tool.poetry]
name = "pypette"
version = "0.0.10"
description = "pypette (to be read as pipette) is a module which makes building pipelines ridiculously simple, allowing users to control the flow with minimal instructions."
authors = ["csurfer <sharma.vishwas88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
crayons = "^0.4.0"
Sphinx = "^4.1.2"
sphinx-autobuild = "^2021.3.14"

[tool.poetry.dev-dependencies]
tox = "^3.24.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
