[tool.poetry]
name = "pypette"
version = "0.0.12"
description = "pypette (to be read as pipette) is a module which makes building pipelines ridiculously simple, allowing users to control the flow with minimal instructions."
authors = ["csurfer <sharma.vishwas88@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://csurfer.github.io/pypette"
repository = "https://github.com/csurfer/pypette"
keywords = ["pipeline", "dev-tool", "threads", "multithreading", "python"]
classifiers=[
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'License :: OSI Approved :: MIT License',
    'Development Status :: 3 - Alpha',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Build Tools',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = "^3.6"
crayons = "^0.4.0"
Sphinx = "^4.1.2"
sphinx-autobuild = "^2021.3.14"

[tool.poetry.dev-dependencies]
tox = "^3.24.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
